# Qt

./: .gitignore  README.md
ESP32-S3-BOX-3-example/: README.md  build.ps1
ESP32CounterGHCP/: .gitignore  CMakeLists.txt  README.md  build.ps1  counter.qml  esp32counter-esp32s3box3-metadata.json  mcu_counter.qmlproject
ESP32CounterGHCP/src/: countercontrol.h
ESP32CounterGHCP/src/freertos/: counter_threads.cpp  counter_threads.h  countercontrol.cpp  main.cpp
ESP32CounterGHCP/src/idf/: main.cpp
ESP32DualCounter/: .gitignore  README.md  build.ps1  mcu_dualcounter.qmlproject
ESP32DualCounter/src/: countercontrol.h
ESP32DualCounter/src/freertos/: countercontrol.cpp
ESP32DualCounter/src/freertos/threads/: counter_threads.cpp  counter_threads.h  qul_thread.cpp  qul_thread.h
ESP32DualCounter/src/idf/: main.cpp
JimFirstQtWidgetApp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  workerthread.cpp  workerthread.h
